buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:3.0.5")
    }
}

allprojects {
    group = "com.navercorp.eventeria"
    version = "1.2.0"

    // https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add("-parameters")
    }
}

subprojects {
    apply plugin: "java"
    apply plugin: "idea"
    apply plugin: "java-library"
    apply plugin: "maven-publish"
    apply plugin: "signing"
    apply plugin: "io.spring.dependency-management"

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    ext {
        CLOUD_EVENTS_VERSION = "2.5.0"
        SPRING_BOOT_VERSION = "3.2.1"
        SPRING_CLOUD_VERSION = "4.1.0"
        SPRING_CLOUD_INTEGRATION_KAFKA = "6.2.1"

        JQWIK_VERSION = "1.7.0"
    }

    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform {
            includeEngines "jqwik"
        }
    }

    dependencies {
        api("com.google.code.findbugs:jsr305:3.0.2")
        api("org.slf4j:slf4j-api")

        testImplementation("org.junit.jupiter:junit-jupiter")
        testImplementation("org.junit.jupiter:junit-jupiter-api")
        testImplementation("org.junit.jupiter:junit-jupiter-params")
        testImplementation("org.junit.jupiter:junit-jupiter-engine")
        testImplementation("net.jqwik:jqwik:${JQWIK_VERSION}")
        testImplementation("org.assertj:assertj-core")

        testImplementation("org.junit.platform:junit-platform-launcher")
        testImplementation("org.junit.platform:junit-platform-commons")

        testImplementation("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${SPRING_BOOT_VERSION}"
            mavenBom "org.springframework.cloud:spring-cloud-stream-dependencies:${SPRING_CLOUD_VERSION}"
        }
    }

    tasks.withType(Javadoc).all { enabled = false }

    java {
        withJavadocJar()
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                repositories {
                    maven {
                        def ossrhUsername = project.hasProperty("ossrhUsername") ? ossrhUsername : ""
                        def ossrhPassword = project.hasProperty("ossrhPassword") ? ossrhPassword : ""

                        credentials {
                            username ossrhUsername
                            password ossrhPassword
                        }

                        def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
                        def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
                        url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
                    }
                }

                pom {
                    name = "eventeria"
                    description = "Event Driven light weight message format."
                    url = "http://github.com/naver/eventeria"
                    licenses {
                        license {
                            name = "The Apache License, Version 2.0"
                            url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                        }
                    }
                    developers {
                        developer {
                            id = "mhyeon-lee"
                            name = "Myeonghyeon Lee"
                            email = "mheyon.lee@gmail.com"
                        }
                        developer {
                            id = "ilkyun-lim"
                            name = "Ilkyun Lim"
                            email = "ilkyun.lim@navercorp.com"
                        }
                        developer {
                            id = "sanha"
                            name = "Sanha Lee"
                            email = "sanhaleehana@gmail.com"
                        }
                        developer {
                            id = "taes-k"
                            name = "Taeseong Kim"
                            email = "cobura12@gmail.com"
                        }
                        developer {
                            id = "chanhyeong"
                            name = "Chanhyeong Cho"
                            email = "chu7825@gmail.com"
                        }
                    }
                    scm {
                        connection = "scm:git:git://github.com/naver/eventeria.git"
                        developerConnection = "scm:git:ssh://github.com/naver/eventeria.git"
                        url = "http://github.com/naver/eventeria"
                    }
                }
            }
        }
    }

    signing {
        sign publishing.publications.mavenJava
    }

    tasks.withType(Sign) {
        onlyIf { !version.endsWith("SNAPSHOT") }
    }
}
